<resources>
    <string name="app_name">Cars involcan</string>
    <string name="action_settings">Reload</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_project">Proyecto</string>
    <string name="label_plate">Matrícula</string>
    <string name="label_driver">Conductor</string>
    <string name="hint_trayecto">Trayecto</string>
    <string name="hint_motivo">Motivo</string>
    <string name="hour">Hora</string>
    <string name="date">Fecha</string>
    <string name="now">Now</string>
    <string name="hint_km_init">Initial KM</string>
    <string name="hint_km_final">Final KM</string>
    <string name="hint_comment">Comment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_json_matricula">matricula</string>
    <string name="tag_json_matriculas">matriculas</string>
    <string name="tag_json_modelo">marcamodelo</string>
    <string name="tag_json_conductor">personas</string>
    <string name="tag_json_proyecto">proyectos</string>
    <string name="tag_json_motivo">MotivoViaje</string>
    <string name="tag_json_trayecto">TrayectoViaje</string>
    <string name="tag_json_KM">KM</string>
    <string name="tag_json_Fecha">Fecha</string>
    <string name="tag_json_Comentarios">Comentarios</string>
    <string name="HOST">http://193.147.109.3:5000/datacar</string>
    <string name="title_recogida">Recogida de vehículo</string>
    <string name="title_entrega">Entrega de vehículo</string>
    <string name="title_sending">Enviando datos</string>
    <string name="title_wait">Espere por favor...</string>
</resources>
